update/navbar-update-and-about-before-css-bugfix-z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -102,7 +102,7 @@ body {
   height: 100px;
   content: "";
   position: absolute;
-  z-index: 100;
+  z-index: 19;
   left: 0;
   bottom: 99%;
   background-image: linear-gradient(to top, #000, #0000);
